# python_boilerplate

./: .gitignore  .gitlab-ci.yml  .gitlab.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
poetry_demo/: pyproject.toml
python_boilerplate/: main.py
python_boilerplate/__private/: one.py
scripts/: build_ci_base_image.sh  cleanup_prometheus_data.sh  common.sh  deploy_to_registry.sh  export-binaries.sh  export_binaries.sh  setup_gitlab_instance.sh
tests/: conftest.py
tests/functional/: test_functional_one.py
tests/unit/: example.xml  test_unit_one.py  test_unit_three.py  test_unit_two.py
